--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,6 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: UseDotNet@2
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
